--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slideshow-image": "^4.2.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
